completed navbar and carousel section

--- a/style/index.scss
+++ b/style/index.scss
@@ -4,3 +4,8 @@
     box-sizing: border-box;
 }
 
+.carousel-caption {
+    margin-bottom: 5.5%;
+    background-image: radial-gradient(black , rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+}
+
