finished carousel and 4 cards with proper images, text, dates, et

--- a/style/index.css
+++ b/style/index.css
@@ -4,7 +4,6 @@
   box-sizing: border-box; }
 
 .carousel-caption {
-  margin-bottom: 5.5%;
-  background-image: radial-gradient(black, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)); }
+  margin-bottom: 5.5%; }
 
 /*# sourceMappingURL=index.css.map */
