--- a/style/index.css
+++ b/style/index.css
@@ -1,9 +1,43 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif; }
+
+html {
+  max-width: 1366px;
+  margin: auto;
+  scroll-behavior: smooth; }
+
+body {
+  width: 90%;
+  margin: auto; }
 
 .carousel-caption {
   margin-bottom: 5.5%; }
+
+.top-heading {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .top-heading h1 {
+    font-size: 2rem;
+    cursor: pointer;
+    align-self: center; }
+  .top-heading p:hover {
+    text-decoration: underline;
+    cursor: pointer; }
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  color: #6c757d;
+  position: sticky;
+  top: 0px; }
+  nav p:hover {
+    cursor: pointer;
+    text-decoration: underline; }
 
 /*# sourceMappingURL=index.css.map */
