--- a/style/index.css
+++ b/style/index.css
@@ -23,21 +23,56 @@ body {
   align-items: center; }
   .top-heading h1 {
     font-size: 2rem;
-    cursor: pointer;
-    align-self: center; }
+    cursor: pointer; }
+  .top-heading p {
+    margin-top: .9rem; }
   .top-heading p:hover {
     text-decoration: underline;
     cursor: pointer; }
+  .top-heading .search-icon {
+    width: 1.8rem;
+    height: auto;
+    margin-right: 1rem;
+    cursor: pointer;
+    filter: invert(70%); }
 
 nav {
   width: 100%;
+  display: block;
   display: flex;
   justify-content: space-between;
   color: #6c757d;
-  position: sticky;
-  top: 0px; }
+  overflow-x: auto; }
   nav p:hover {
     cursor: pointer;
     text-decoration: underline; }
+  nav p {
+    margin: 1rem;
+    margin-top: 0; }
+  nav img {
+    display: none; }
+
+.jcode-blogs-break {
+  display: none; }
+
+@media (max-width: 992px) {
+  nav .left-angle,
+  nav .right-angle {
+    display: block;
+    position: absolute;
+    width: 2rem;
+    height: auto; }
+  nav .left-angle {
+    top: 6.5rem;
+    left: 1rem; }
+  nav .right-angle {
+    top: 6.5em;
+    right: 1rem; } }
+@media (max-width: 576px) {
+  .top-heading h1 {
+    font-size: 1.4rem; }
+
+  .jcode-blogs-break {
+    display: block; } }
 
 /*# sourceMappingURL=index.css.map */
