--- a/style/index.scss
+++ b/style/index.scss
@@ -32,26 +32,83 @@ body {
     h1 {
         font-size: 2rem;
         cursor: pointer;
-        align-self: center;
+    }
+
+    p {
+        margin-top: .9rem;
     }
 
     p:hover {
         text-decoration: underline;
         cursor: pointer;
+    }
+
+    .search-icon {
+        width: 1.8rem;
+        height: auto;
+        margin-right: 1rem;
+        cursor: pointer;
+        filter: invert(70%);
     }
 }
 
 nav {
     width: 100%;
+    display: block;
     display: flex;
     justify-content: space-between;
     color: $light-grey;
-    position: sticky;
-    top: 0px;
+    overflow-x: auto;
 
     p:hover {
         cursor: pointer;
         text-decoration: underline;
     }
+
+    p {
+        margin: 1rem;
+        margin-top: 0;
+    }
+
+    img {
+        display: none;
+    }
 }
 
+.jcode-blogs-break {
+    display: none;
+}
+
+@media (max-width: 992px) {
+    nav {
+        .left-angle,
+        .right-angle {
+            display: block;
+            position: absolute;
+            width: 2rem;
+            height: auto;
+        }
+
+        .left-angle {
+            top: 6.5rem;
+            left: 1rem;
+        }
+
+        .right-angle {
+            top: 6.5em;
+            right: 1rem;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .top-heading {
+        h1 {
+            font-size: 1.4rem;
+        }
+    }
+
+    .jcode-blogs-break {
+        display: block;
+    }
+}
