--- a/style/index.scss
+++ b/style/index.scss
@@ -1,5 +1,6 @@
 $light-grey: #6c757d;
-
+$primary-color: #007bff;
+$heading: 1.4rem;
 
 * {
     margin: 0;
@@ -24,7 +25,7 @@ body {
 }
 
 .top-heading {
-    margin: 1rem 0;
+    margin: .5rem 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -79,6 +80,13 @@ nav {
     display: none;
 }
 
+.heading {
+    font-size: $heading;
+    margin: 3rem 0 1rem 0;
+}
+
+
+
 @media (max-width: 992px) {
     nav {
         .left-angle,
@@ -87,19 +95,19 @@ nav {
             position: absolute;
             width: 2rem;
             height: auto;
+            top: 5.8rem;
         }
 
         .left-angle {
-            top: 6.5rem;
             left: 1rem;
         }
 
         .right-angle {
-            top: 6.5em;
             right: 1rem;
         }
     }
 }
+
 
 @media (max-width: 576px) {
     .top-heading {
