added data to recent topics

--- a/style/index.css
+++ b/style/index.css
@@ -16,16 +16,24 @@ body {
 .carousel-caption {
   margin-bottom: 5.5%; }
 
+header h1,
+header p {
+  color: #383838; }
+
 .top-heading {
   margin: .5rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  .top-heading #logo {
+    color: #007bff; }
   .top-heading h1 {
     font-size: 2rem;
-    cursor: pointer; }
+    cursor: pointer;
+    color: #383838; }
   .top-heading p {
-    margin-top: .9rem; }
+    margin-top: .9rem;
+    color: #383838; }
   .top-heading p:hover {
     text-decoration: underline;
     cursor: pointer; }
@@ -41,12 +49,12 @@ nav {
   display: block;
   display: flex;
   justify-content: space-between;
-  color: #6c757d;
   overflow-x: auto; }
   nav p:hover {
     cursor: pointer;
     text-decoration: underline; }
   nav p {
+    color: #6c757d;
     margin: 1rem;
     margin-top: 0; }
   nav img {
@@ -57,7 +65,12 @@ nav {
 
 .heading {
   font-size: 1.4rem;
-  margin: 3rem 0 1rem 0; }
+  margin: 3rem 0 1rem 0;
+  color: #383838 !important; }
+
+.row p,
+.row h3 {
+  color: #383838; }
 
 @media (max-width: 992px) {
   nav .left-angle,
