--- a/style/index.css
+++ b/style/index.css
@@ -64,13 +64,22 @@ nav {
   display: none; }
 
 .heading {
-  font-size: 1.4rem;
+  font-size: 2rem;
   margin: 3rem 0 1rem 0;
   color: #383838 !important; }
+
+.col .mb-0 {
+  font-size: 1.3rem; }
+.col .mb-auto,
+.col .card-text {
+  margin: .5rem 0; }
 
 .row p,
 .row h3 {
   color: #383838; }
+
+.container .media {
+  margin: 3rem 0; }
 
 @media (max-width: 992px) {
   nav .left-angle,
