--- a/style/index.css
+++ b/style/index.css
@@ -72,7 +72,8 @@ nav {
   font-size: 1.3rem; }
 .col .mb-auto,
 .col .card-text {
-  margin: .5rem 0; }
+  margin: .5rem 0;
+  color: #494949; }
 
 .row p,
 .row h3 {
@@ -80,6 +81,28 @@ nav {
 
 .container .media {
   margin: 3rem 0; }
+  .container .media p {
+    color: #494949; }
+  .container .media .date {
+    font-size: 0.9rem;
+    color: #6c757d; }
+
+footer {
+  color: #494949; }
+  footer hr {
+    margin: 3rem 0; }
+  footer .about-us-text {
+    line-height: 2rem; }
+  footer .terms {
+    margin-top: 2rem; }
+    footer .terms * {
+      line-height: 2rem; }
+  footer .connect-us {
+    text-align: center; }
+
+.container .social-link {
+  font-size: 2rem;
+  margin: 0 .2rem; }
 
 @media (max-width: 992px) {
   nav .left-angle,
